--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -129,12 +129,10 @@ jobs:
 
   # Deploys the final package to NPM
   deploy:
-    # Trigger this step only when a commit on master is tagged with a version number
-    # or for annotated tags (which have no base branch)
+    # Trigger this step only when a commit on any branch is tagged with a version number
     if: |
       contains(github.event.head_commit.message, '[skip ci]') == false &&
       github.event_name == 'push' &&
-      (github.event.base_ref == 'refs/heads/master' || github.event.base_ref == '') &&
       startsWith(github.ref, 'refs/tags/v')
 
     needs: [unit-tests]
