chore: release v5.0.0-alpha.3
### Breaking changes
* The status `Alive` was added to the `NodeStatus` enumeration. The node status can no longer switch between all states, only between `Dead` and `Alive`, between `Asleep` and `Awake` and from and to `Unknown`.
* The `status` property on `ZWaveNode` is now readonly. To change the status, use the `markAsAsleep` and similar methods, which only change the status if it is legal to do so.
* Unsolicited commands are now discarded in accordance with the Z-Wave specs if they are unencrypted but the CC is supported secure only

### Features
* A new method `withOptions` was added to `CCAPI`, which controls the used `SendCommandOptions`. For example, this allows changing the priority of each API call for that instance.
* All interview messages now automatically have a lower priority than most other messages, e.g. the ones created by user interaction. This should make the network feel much more responsive while an interview process is active.
* Added a configuration file for `ABUS CFA3010`.
* The node events `asleep`, `awake`, `alive` and `dead` now include the previous status aswell.

### Bugfixes
* Improved performance of reading from the Value DB
* Retransmission of commands now distinguishes between errors on the controller side and missing responses from nodes

### Changes under the hood
* The driver has been completely rewritten with state machines for a well-defined program flow and better testability. This should solve issues where communication may get stuck for unknown reasons.
* A node's `status` and `ready` properties are now managed by state machines to have better control over how and when the status changes.
* Enabled the TypeScript option `strictFunctionTypes` and the usage of several decorators is now statically enforced
* Added more fine-grained control over expected responses, and distinguish between responses, callbacks and node updates for sent messages.

--- a/lerna.json
+++ b/lerna.json
@@ -1,13 +1,20 @@
 {
-	"packages": ["packages/*"],
-	"version": "5.0.0-alpha.2",
+	"packages": [
+		"packages/*"
+	],
+	"version": "5.0.0-alpha.3",
 	"command": {
 		"run": {
 			"stream": true
 		},
 		"version": {
-			"allowBranch": ["master", "release-*"],
-			"ignoreChanges": ["*.md"],
+			"allowBranch": [
+				"master",
+				"release-*"
+			],
+			"ignoreChanges": [
+				"*.md"
+			],
 			"amend": true,
 			"push": false
 		}
