build: only include actual source files in IntelliSense

--- a/packages/config/tsconfig.json
+++ b/packages/config/tsconfig.json
@@ -11,7 +11,9 @@
 		}
 	],
 	"include": [
-		"**/*.ts"
+		"gulpfile.ts",
+		"maintenance/**/*.ts",
+		"src/**/*.ts"
 	],
 	"exclude": [
 		"build/**",
