--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -3,7 +3,7 @@
 	"extends": "../../tsconfig.json",
 	"compilerOptions": {},
 	"include": [
-		"**/*.ts"
+		"src/**/*.ts"
 	],
 	"exclude": [
 		"build/**",
