--- a/packages/zwave-js/tsconfig.json
+++ b/packages/zwave-js/tsconfig.json
@@ -17,7 +17,9 @@
 		},
 	],
 	"include": [
-		"**/*.ts"
+		"gulpfile.ts",
+		"maintenance/**/*.ts",
+		"src/**/*.ts"
 	],
 	"exclude": [
 		"build/**",
