--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,19 @@
 	"configurations": [
 		{
 			"type": "node",
+			"name": "vscode-jest-tests",
+			"request": "launch",
+			"program": "${workspaceFolder}/node_modules/jest/bin/jest",
+			"args": [
+				"--runInBand",
+			],
+			"cwd": "${workspaceFolder}",
+			"console": "integratedTerminal",
+			"internalConsoleOptions": "neverOpen",
+			"disableOptimisticBPs": true
+		},
+		{
+			"type": "node",
 			"request": "attach",
 			"name": "Attach (RasPi)",
 			"address": "heizung.fritz.box",
