fix(tests): add back test for serialAPIUnexpected event

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
 			"request": "launch",
 			"program": "${workspaceFolder}/node_modules/jest/bin/jest",
 			"args": [
-				"--runInBand",
+				"--runInBand"
 			],
 			"cwd": "${workspaceFolder}",
 			"console": "integratedTerminal",
