ci: skip dependabot automerge action for fork PRs

--- a/.github/workflows/dependabot-automerge.yml
+++ b/.github/workflows/dependabot-automerge.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   auto-merge:
+    if: contains( ['dependabot[bot]', 'dependabot-preview[bot]'], github.actor )
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
