chore: release v5.0.0-alpha.4
### Breaking changes
* The status `Alive` was added to the `NodeStatus` enumeration. The node status can no longer switch between all states, only between `Dead` and `Alive`, between `Asleep` and `Awake` and from and to `Unknown`.
* The `status` property on `ZWaveNode` is now readonly. To change the status, use the `markAsAsleep` and similar methods, which only change the status if it is legal to do so.
* Unsolicited commands are now discarded in accordance with the Z-Wave specs if they are unencrypted but the CC is supported secure only
* `driver.start()` now throws if no handler for the `"error"` is attached

### Features
* A new method `withOptions` was added to `CCAPI`, which controls the used `SendCommandOptions`. For example, this allows changing the priority of each API call for that instance.
* All interview messages now automatically have a lower priority than most other messages, e.g. the ones created by user interaction. This should make the network feel much more responsive while an interview process is active.
* Added a configuration file for `ABUS CFA3010`.
* The node events `asleep`, `awake`, `alive` and `dead` now include the previous status aswell.
* Added the method `isEncapsulatedWith` to `CommandClass` to perform checks on the encapsulation stack.
* In addition to serial ports, serial-over-tcp connections (e.g. by using `ser2net`) are now supported. You can connect to such a host using a connection string of the form `tcp://hostname:port`. Use these `ser2net` settings to host a serial port: `<external-port>:raw:0:<path-to-serial>:115200 8DATABITS NONE 1STOPBIT`

### Bugfixes
* Improved performance of reading from the Value DB
* Retransmission of commands now distinguishes between errors on the controller side and missing responses from nodes
* If a node that is known to be included securely does not respond to the `Security CC` interview, it is no longer assumed to be non-secure
* If a node that is assumed to be incl

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zwave-js/shared",
-  "version": "4.0.1",
+  "version": "5.0.0-alpha.4",
   "description": "zwave-js: shared utilities",
   "publishConfig": {
     "access": "public"
