--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "supports-color": "^7.2.0",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.1.0-dev.20200909",
+    "typescript": "^4.1.0-beta",
     "yargs": "^15.4.1"
   },
   "dependencies": {
