--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "zwave-js": "file:packages\\zwave-js"
   },
   "scripts": {
+    "build": "lerna run build",
     "watch": "lerna run watch --parallel",
     "test:reset": "jest --clear-cache",
     "test:ts": "jest",
