--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zwave-js/core",
-  "version": "5.0.0-alpha.4",
+  "version": "5.1.0",
   "description": "zwave-js: core components",
   "publishConfig": {
     "access": "public"
