--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -17,7 +17,7 @@ on:
   pull_request: {}
 
 jobs:
-  build:
+  lint:
     if: contains(github.event.head_commit.message, '[skip ci]') == false
 
     runs-on: ubuntu-latest
@@ -46,16 +46,11 @@ jobs:
     - name: Lint config files
       run: npx lerna run lint:config
 
-    - name: Import main entry point
-      run: node -e 'require("./packages/zwave-js")'
-
   # ===================
 
   # Runs unit tests on all supported node versions and OSes
   unit-tests:
     if: contains(github.event.head_commit.message, '[skip ci]') == false
-
-    needs: [build]
 
     runs-on: ${{ matrix.os }}
     strategy:
@@ -83,6 +78,11 @@ jobs:
       run: npm run test:ci
       env:
         CI: true
+
+    # Test that the main entry point is not broken
+    - name: Import main entry point
+      run: node -e 'require("./packages/zwave-js")'
+
 
   # ===================
 
@@ -135,7 +135,7 @@ jobs:
       github.event_name == 'push' &&
       startsWith(github.ref, 'refs/tags/v')
 
-    needs: [unit-tests]
+    needs: [lint, unit-tests]
 
     runs-on: ubuntu-latest
     strategy:
