--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zwave-js/shared",
-  "version": "5.0.0-alpha.4",
+  "version": "5.2.0",
   "description": "zwave-js: shared utilities",
   "publishConfig": {
     "access": "public"
