--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,7 @@
 	"packages": [
 		"packages/*"
 	],
-	"version": "5.2.2",
+	"version": "5.2.3-beta.0",
 	"command": {
 		"run": {
 			"stream": true
