refactor: extract SpyTransport into a dev-only testing package

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,9 @@
 			],
 			"@zwave-js/shared": [
 				"shared/src"
+			],
+			"@zwave-js/testing": [
+				"testing/src"
 			]
 		},
 		"composite": true,
