--- a/packages/zwave-js/tsconfig.json
+++ b/packages/zwave-js/tsconfig.json
@@ -15,6 +15,9 @@
 		{
 			"path": "../shared/tsconfig.build.json"
 		},
+		{
+			"path": "../testing/tsconfig.build.json"
+		},
 	],
 	"include": [
 		"gulpfile.ts",
