chore: release v5.3.2-alpha.0
### Bugfixes
* Added / fixed some missing or incorrect exports from `zwave-js`:
  * The `CCAPI` type is now exported
  * `NODE_ID_BROADCAST` and `NODE_ID_MAX` are now value exports
  * The `Endpoint` class is now exported
  * The `InterviewStage` enum is now exported
* Several user-facing errors were converted from `Error` to `ZWaveError` in order to be consistent with other errors.
* Warnings about insecure communication with a node because of missing security configuration are now emitted as `ZWaveError`s with code `ZWaveErrorCodes.Controller_NodeInsecureCommunication`
* Internal references to `@types/fs-extra` and `jest` are no longer leaked, allowing users to consume this library without `skipLibCheck`
* Sent nonces are now transmitted using the `ACK` and `AutoRoute` transmit options

### Changes under the hood
* `SpyTransport` was moved to `@zwave-js/testing`, a development-only testing package

--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,8 @@
 {
-	"packages": ["packages/*"],
-	"version": "5.3.1",
+	"packages": [
+		"packages/*"
+	],
+	"version": "5.3.2-alpha.0",
 	"command": {
 		"run": {
 			"stream": true
@@ -11,7 +13,9 @@
 				"release-*",
 				"send-nonce-transmit-options"
 			],
-			"ignoreChanges": ["*.md"],
+			"ignoreChanges": [
+				"*.md"
+			],
 			"amend": true,
 			"push": false
 		}
