--- a/packages/serial/package.json
+++ b/packages/serial/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zwave-js/serial",
-  "version": "5.3.0",
+  "version": "5.3.2-alpha.0",
   "description": "zwave-js: Serialport driver",
   "publishConfig": {
     "access": "public"
