--- a/packages/zwave-js/package.json
+++ b/packages/zwave-js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zwave-js",
-  "version": "5.3.1",
+  "version": "5.3.2-alpha.0",
   "description": "Z-Wave driver written entirely in JavaScript/TypeScript",
   "keywords": [],
   "main": "index.js",
