--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -55,7 +55,7 @@
 				"${workspaceFolder}/test/run.ts"
 			],
 			"env": {
-				// "NO_CACHE": "true",
+				"NO_CACHE": "true",
 				// "LOGLEVEL": "verbose"
 			},
 			"console": "integratedTerminal",
