fix(build): try to use project-relative imports

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
 	"typescript.tsdk": "node_modules/typescript/lib",
 	"typescript.enablePromptUseWorkspaceTsdk": true,
+	"typescript.tsserver.importModuleSpecifierPreference": "project-relative",
 	"jest.showCoverageOnLoad": true,
 	"jest.enableCodeLens": true,
 	"jest.pathToJest": "npm run test:ts --",
@@ -94,6 +95,10 @@
 	"files.associations": {
 		"**/config/**/*.json": "jsonc"
 	},
-	"editor.rulers": [72, 80, 120],
+	"editor.rulers": [
+		72,
+		80,
+		120
+	],
 	"files.participants.timeout": 10000
 }
