ci: use steps output to propagate version and release body

--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -152,16 +152,17 @@ jobs:
         node-version: ${{ matrix.node-version }}
 
     - name: Extract the version and commit body from the tag
+      id: extract_release
       # The body may be multiline, therefore we need to escape some characters
       run: |
         VERSION="${{ github.ref }}"
         VERSION=${VERSION##*/v}
-        echo "VERSION=$VERSION" >> $GITHUB_ENV
+        echo "::set-output name=VERSION::$VERSION"
         BODY=$(git show -s --format=%b)
         BODY="${BODY//'%'/'%25'}"
         BODY="${BODY//$'\n'/'%0A'}"
         BODY="${BODY//$'\r'/'%0D'}"
-        echo "BODY=$BODY" >> $GITHUB_ENV
+        echo "::set-output name=BODY::$BODY"
 
     - name: Install dependencies
       run: npm ci
@@ -181,11 +182,11 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: ${{ github.ref }}
-        release_name: Release v${{ env.VERSION }}
+        release_name: Release v${{ steps.extract_release.outputs.VERSION }}
         draft: false
         # Prerelease versions create prereleases on Github
-        prerelease: ${{ contains(env.VERSION, '-') }}
-        body: ${{ env.BODY }}
+        prerelease: ${{ contains(steps.extract_release.outputs.VERSION, '-') }}
+        body: ${{ steps.extract_release.outputs.BODY }}
 
     - name: Notify Sentry.io about the release
       run: |
@@ -193,7 +194,7 @@ jobs:
         export SENTRY_AUTH_TOKEN=${{ secrets.SENTRY_AUTH_TOKEN }}
         export SENTRY_ORG=alcalzone
         export SENTRY_PROJECT=iobroker_zwave
-        export SENTRY_VERSION=zwave-js@${{ env.VERSION }}
+        export SENTRY_VERSION=zwave-js@${{ steps.extract_release.outputs.VERSION }}
         sentry-cli releases new $SENTRY_VERSION
         sentry-cli releases set-commits $SENTRY_VERSION --auto
         sentry-cli releases files $SENTRY_VERSION upload-sourcemaps ./packages/*/build
