--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -94,6 +94,10 @@
 	"files.associations": {
 		"**/config/**/*.json": "jsonc"
 	},
-	"editor.rulers": [72, 80, 120],
+	"editor.rulers": [
+		72,
+		80,
+		120
+	],
 	"files.participants.timeout": 10000
 }
