--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.0-dev.20200930",
+    "xml2json": "^0.12.0",
     "yargs": "^16.0.3"
   },
   "dependencies": {
