--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/semver": "^7.3.4",
     "@types/serialport": "^8.0.1",
     "@types/triple-beam": "^1.3.2",
+    "@types/xml2json": "^0.11.3",
     "@types/yargs": "^15.0.7",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
