--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "supports-color": "^7.2.0",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.1.0-dev.20200930",
+    "typescript": "^4.1.1-rc",
     "yargs": "^16.0.3"
   },
   "dependencies": {
