--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -38,6 +38,7 @@
     "ansi-colors": "^4.1.1",
     "fs-extra": "^9.0.1",
     "json5": "^2.1.3",
+    "semver": "^7.3.2",
     "winston": "^3.3.3"
   },
   "scripts": {
