feat(config): add support for importing the OZW devices database (#1093)

--- a/maintenance/tsconfig.json
+++ b/maintenance/tsconfig.json
@@ -8,5 +8,8 @@
 		"target": "es2015",
 		"rootDir": "../"
 	},
-	"include": ["*.ts", "../packages/*/src/**/*.ts"]
+	"include": [
+		"*.ts",
+		"../packages/*/src/**/*.ts"
+	]
 }
