--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/semver": "^7.3.4",
     "@types/serialport": "^8.0.1",
     "@types/triple-beam": "^1.3.2",
+    "@types/xml2json": "^0.11.3",
     "@types/yargs": "^15.0.7",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
@@ -81,6 +82,7 @@
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.1-rc",
+    "xml2json": "^0.12.0",
     "yargs": "^16.0.3"
   },
   "dependencies": {
@@ -113,7 +115,8 @@
     "release": "lerna version --no-commit-hooks",
     "preversion": "release-script --lerna-check",
     "version": "release-script --lerna",
-    "postversion": "git push && git push --tags"
+    "postversion": "git push && git push --tags",
+    "config": "ts-node maintenance/importConfig.ts"
   },
   "readme": "README.md",
   "husky": {
