fix: comment and update action

--- a/.github/workflows/updateIndex.yml
+++ b/.github/workflows/updateIndex.yml
@@ -3,6 +3,9 @@ name: Update Devices Index
 
 on:
   pull_request:
+    types: [created]
+  issue_comment:
+    types: [created]
 
 jobs:
   build:
@@ -30,13 +33,20 @@ jobs:
             git add $indexPath
             echo "::set-output name=PUSH::true"
           fi
+      - name: Comment a pull_request
+        if: steps.check_index.outputs.PUSH == 'true' && github.event.action == 'pull_request'
+        uses: mb2dev/github-action-comment-pull-request@1.0.0
+        with:
+          message: "The index file isn't updated. Comment 'update index' to automatically update it"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Commit files
-        if: contains(steps.check_index.outputs.PUSH, 'true')
+        if: steps.check_index.outputs.PUSH == 'true' && github.event.action!= 'pull_request' && github.event.comment.body === 'update index'
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git commit -m "fix(config): updated devices index.json"
       - name: Push changes
+        if: steps.check_index.outputs.PUSH == 'true' && github.event.action!= 'pull_request' && github.event.comment.body === 'update index'
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
