fix: use origin/master HEAD

--- a/.github/workflows/update-config-index.yml
+++ b/.github/workflows/update-config-index.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Check if any config files changed
         id: check_changed
         run: |
-          if $(git diff --name-only --diff-filter=AM ${{ github.event.before }} ${{ github.sha }} | grep -q packages/config/config/devices)
+          if $(git diff origin/master HEAD --name-only | grep -q packages/config/config/devices)
           then
             echo "Devices DB has been updated"
             echo "::set-output name=CHANGED::true"
