--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -32,8 +32,8 @@
     "node": ">=10.0.0"
   },
   "dependencies": {
-    "@zwave-js/core": "file:../core",
-    "@zwave-js/shared": "file:../shared",
+    "@zwave-js/core": "^5.4.0",
+    "@zwave-js/shared": "^5.4.0",
     "alcalzone-shared": "^3.0.0",
     "ansi-colors": "^4.1.1",
     "fs-extra": "^9.0.1",
