--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -32,7 +32,7 @@
   },
   "dependencies": {
     "@alcalzone/jsonl-db": "^1.2.2",
-    "@zwave-js/shared": "file:../shared",
+    "@zwave-js/shared": "^5.4.0",
     "alcalzone-shared": "^3.0.0",
     "ansi-colors": "^4.1.1",
     "moment": "^2.29.0",
