--- a/packages/serial/package.json
+++ b/packages/serial/package.json
@@ -31,7 +31,7 @@
     "node": ">=10.0.0"
   },
   "dependencies": {
-    "@zwave-js/core": "file:../core",
+    "@zwave-js/core": "^5.4.0",
     "alcalzone-shared": "^3.0.0",
     "serialport": "^9.0.1",
     "winston": "^3.3.3"
