--- a/packages/zwave-js/package.json
+++ b/packages/zwave-js/package.json
@@ -63,10 +63,10 @@
     "@alcalzone/jsonl-db": "^1.2.2",
     "@sentry/integrations": "^5.24.2",
     "@sentry/node": "^5.24.2",
-    "@zwave-js/config": "file:../config",
-    "@zwave-js/core": "file:../core",
-    "@zwave-js/serial": "file:../serial",
-    "@zwave-js/shared": "file:../shared",
+    "@zwave-js/config": "^5.4.0",
+    "@zwave-js/core": "^5.4.0",
+    "@zwave-js/serial": "^5.4.0",
+    "@zwave-js/shared": "^5.4.0",
     "alcalzone-shared": "^3.0.0",
     "ansi-colors": "^4.1.1",
     "fs-extra": "^9.0.1",
