chore: migrate to npm7 workspaces and simplify monorepo setup (#1132)

--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -34,6 +34,10 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
+    # We need npm@7 for the workspaces feature
+    - name: Update npm to >=7
+      run: "[ $(npm -v | cut -d. -f1) -lt 7 ] && npm i -g npm@7"
+
     - name: Install dependencies
       run: npm ci
 
@@ -66,6 +70,10 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+
+    # We need npm@7 for the workspaces feature
+    - name: Update npm to >=7
+      run: "[ $(npm -v | cut -d. -f1) -lt 7 ] && npm i -g npm@7"
 
     - name: Install dependencies
       run: npm ci
@@ -109,6 +117,10 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
+    # We need npm@7 for the workspaces feature
+    - name: Update npm to >=7
+      run: "[ $(npm -v | cut -d. -f1) -lt 7 ] && npm i -g npm@7"
+
     - name: Install dependencies
       run: npm ci
 
@@ -151,6 +163,10 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+
+    # We need npm@7 for the workspaces feature
+    - name: Update npm to >=7
+      run: "[ $(npm -v | cut -d. -f1) -lt 7 ] && npm i -g npm@7"
 
     - name: Extract the version and commit body from the tag
       id: extract_release
