chore: update contributors [skip ci]

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "email": "d.griesel@gmx.net"
   },
   "contributors": [
+    "Daniel Lando (https://github.com/robertsLando)",
     "RoboPhred (https://github.com/RoboPhred)"
   ],
   "license": "MIT",
