--- a/lerna.json
+++ b/lerna.json
@@ -1,13 +1,17 @@
 {
-	"packages": ["packages/*"],
+	"packages": [
+		"packages/*"
+	],
 	"useWorkspaces": true,
-	"version": "5.4.0",
+	"version": "5.4.1-alpha.0",
 	"command": {
 		"run": {
 			"stream": true
 		},
 		"version": {
-			"ignoreChanges": ["*.md"],
+			"ignoreChanges": [
+				"*.md"
+			],
 			"amend": true,
 			"push": false
 		}
