--- a/packages/serial/package.json
+++ b/packages/serial/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zwave-js/serial",
-  "version": "5.4.0",
+  "version": "5.4.1-alpha.0",
   "description": "zwave-js: Serialport driver",
   "publishConfig": {
     "access": "public"
@@ -31,7 +31,7 @@
     "node": ">=10.0.0"
   },
   "dependencies": {
-    "@zwave-js/core": "^5.4.0",
+    "@zwave-js/core": "^5.4.1-alpha.0",
     "alcalzone-shared": "^3.0.0",
     "serialport": "^9.0.1",
     "winston": "^3.3.3"
