--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zwave-js/config",
-  "version": "5.4.1-alpha.0",
+  "version": "5.4.0",
   "description": "zwave-js: configuration files",
   "publishConfig": {
     "access": "public"
@@ -32,7 +32,7 @@
     "node": ">=10.0.0"
   },
   "dependencies": {
-    "@zwave-js/core": "^5.4.1-alpha.0",
+    "@zwave-js/core": "^5.4.0",
     "@zwave-js/shared": "^5.4.0",
     "alcalzone-shared": "^3.0.0",
     "ansi-colors": "^4.1.1",
