--- a/packages/zwave-js/package.json
+++ b/packages/zwave-js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zwave-js",
-  "version": "5.4.1-alpha.0",
+  "version": "5.4.0",
   "description": "Z-Wave driver written entirely in JavaScript/TypeScript",
   "keywords": [],
   "main": "index.js",
@@ -63,9 +63,9 @@
     "@alcalzone/jsonl-db": "^1.2.2",
     "@sentry/integrations": "^5.24.2",
     "@sentry/node": "^5.24.2",
-    "@zwave-js/config": "^5.4.1-alpha.0",
-    "@zwave-js/core": "^5.4.1-alpha.0",
-    "@zwave-js/serial": "^5.4.1-alpha.0",
+    "@zwave-js/config": "^5.4.0",
+    "@zwave-js/core": "^5.4.0",
+    "@zwave-js/serial": "^5.4.0",
     "@zwave-js/shared": "^5.4.0",
     "alcalzone-shared": "^3.0.0",
     "ansi-colors": "^4.1.1",
