--- a/lerna.json
+++ b/lerna.json
@@ -7,6 +7,7 @@
 			"stream": true
 		},
 		"version": {
+			"allowBranch": ["master", "release-*"],
 			"ignoreChanges": ["*.md"],
 			"amend": true,
 			"push": false
