feat(docs): auto-generate interfaces, types, enums, etc. in docs

--- a/maintenance/tsconfig.json
+++ b/maintenance/tsconfig.json
@@ -5,8 +5,12 @@
 		"module": "commonjs",
 		"moduleResolution": "node",
 		// "noImplicitAny": true,
+		"lib": [
+			"ES2020"
+		],
 		"target": "es2015",
-		"rootDir": "../"
+		"rootDir": "../",
+		"newLine": "lf"
 	},
 	"include": [
 		"*.ts",
