--- a/package.json
+++ b/package.json
@@ -114,7 +114,8 @@
     "version": "rm package-lock.json && npm i && release-script --lerna",
     "postversion": "git push && git push --tags",
     "config": "ts-node maintenance/importConfig.ts",
-    "docs": "docsify serve docs"
+    "docs": "docsify serve docs",
+    "generate-docs": "ts-node -P maintenance/tsconfig.json maintenance/generateTypedDocs.ts"
   },
   "readme": "README.md",
   "husky": {
