--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,9 +9,7 @@
 			"name": "vscode-jest-tests",
 			"request": "launch",
 			"program": "${workspaceFolder}/node_modules/jest/bin/jest",
-			"args": [
-				"--runInBand"
-			],
+			"args": ["--runInBand"],
 			"cwd": "${workspaceFolder}",
 			"console": "integratedTerminal",
 			"internalConsoleOptions": "neverOpen",
@@ -25,19 +23,14 @@
 			"port": 9229,
 			"localRoot": "${workspaceFolder}",
 			"remoteRoot": "/opt/iobroker/node_modules/zwave-js",
-			"skipFiles": [
-				"<node_internals>/**"
-			]
+			"skipFiles": ["<node_internals>/**"]
 		},
 		{
 			"type": "node",
 			"request": "attach",
 			"name": "Attach (localhost)",
 			"port": 9229,
-			"skipFiles": [
-				"<node_internals>/**",
-				"**/typescript.js"
-			],
+			"skipFiles": ["<node_internals>/**", "**/typescript.js"],
 			"sourceMaps": true
 		},
 		{
@@ -55,13 +48,29 @@
 				"${workspaceFolder}/test/run.ts"
 			],
 			"env": {
-				"NO_CACHE": "true",
+				"NO_CACHE": "true"
 				// "LOGLEVEL": "verbose"
 			},
 			"console": "integratedTerminal",
-			"skipFiles": [
-				"<node_internals>/**"
+			"skipFiles": ["<node_internals>/**"],
+			"sourceMaps": true
+		},
+		{
+			"type": "node",
+			"request": "launch",
+			"name": "Generate typed docs",
+			"port": 9229,
+			"runtimeArgs": [
+				"--async-stack-traces",
+				"--inspect-brk=9229",
+				"-r",
+				"ts-node/register/transpile-only",
+				"-r",
+				"tsconfig-paths/register",
+				"${workspaceFolder}/maintenance/generateTypedDocs.ts"
 			],
+			"console": "integratedTerminal",
+			"skipFiles": ["<node_internals>/**"],
 			"sourceMaps": true
 		},
 		{
@@ -75,9 +84,7 @@
 				"${workspaceFolder}/test/debug.js"
 			],
 			"console": "integratedTerminal",
-			"skipFiles": [
-				"<node_internals>/**"
-			],
+			"skipFiles": ["<node_internals>/**"],
 			"sourceMaps": true
 		}
 	]
