--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
   "workspaces": [
     "packages/*"
   ],
-  "dependencies": {},
   "devDependencies": {
     "@actions/core": "^1.2.6",
     "@actions/exec": "^1.0.4",
@@ -83,6 +82,7 @@
     "prettier-plugin-organize-imports": "^1.1.1",
     "semver": "^7.3.2",
     "supports-color": "^7.2.0",
+    "ts-morph": "^9.1.0",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.2.0-dev.20201117",
